# django_ninja_errors

./: .gitignore  README.md  pyproject.toml
config/: api.py  exception_handlers.py  route.py  settings.py  urls.py
users/: api_errors.py  controller.py  models.py  schemas.py
users/migrations/: 0001_initial.py
utils/: base_exceptions.py  django_schema.py  examples_generator.py
